--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Montserrat:wght@100&display=swap"
         rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
 </head>
 
 <body>
+    <div class="contenedor"> 
     <div class="name">
         <div class="img"><img src="amumu2.jpg" alt=""></div>
         <div class="contenido">
@@ -76,6 +79,7 @@
 
 
     </div>
+</div>
 
 
 
