--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="info">
         <p class="tituloseccion">Experiencia Laboral</p>
         <P class="infoinfo">De manera formal no tengo experiencia no obstante de manera informal tengo experiencia como
-            auxiliar administrativo, venta de verduras, servicio al cliente</P><br>
+            auxiliar administrativo, ventas , servicio al cliente</P><br>
 
 
 
